# UserManagerSystem

./: CMakeLists.txt  CMakeUserPresets.json  README.md
SJwt/: SJwt.cpp  SJwt.h
SWidget/: CMakeLists.txt  SApp.cpp  SApp.h  SEventfilterObject.cpp  SEventfilterObject.h  SEventfilterObject2.cpp  SEventfilterObject2.h  SHeaderView.cpp  SHeaderView.h  SIODialog.cpp  SIODialog.h  SMaskWidget.cpp  SMaskWidget.h  SNavBar.cpp  SNavBar.h  SSwitchButton.cpp  SSwitchButton.h
UserPrivilegeManger-Client/: CMakeLists.txt  Mainwindow.cpp  Mainwindow.h  ResourceClient.qrc  main.cpp
UserPrivilegeManger-Client/LoginRegister/: CMakeLists.txt  LoginRegisterDlg.cpp  LoginRegisterDlg.h  LoginRegister_Res.qrc
UserPrivilegeManger-Client/LoginRegister/LoginRegister_Res/: style.css
UserPrivilegeManger-Client/ResourceClient/: style.css
UserPrivilegeManger-Client/SubPage/: CMakeLists.txt  PAddEditDlg.cpp  PAddEditDlg.h  PManagerPage.cpp  PManagerPage.h  PManagerPage.ui  PersonCenterPage.cpp  PersonCenterPage.h  PersonMessage.cpp  PersonMessage.h  UserDetailDlg.cpp  UserDetailDlg.h  UserDetailsDlg.cpp  UserDetailsDlg.h  UserManagerPage.cpp  UserManagerPage.h  UserManagerPage.ui  UserPrivilegeDlg.cpp  UserPrivilegeDlg.h  UseraddDlg.cpp  UseraddDlg.h  UsereditDlg.cpp  UsereditDlg.h
UserPrivilegeManger-Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
Util/: CMakeLists.txt  SConfigFile.cpp  SConfigFile.h  SFieldTranslate.cpp  SFieldTranslate.h  SHttpClient.cpp  SHttpClient.h  SHttpPartParse.cpp  SHttpPartParse.h  SResultCode.h  SSqlConnectionPool.cpp  SSqlConnectionPool.h
(+8 files in other folders)
