cmake_minimum_required(VERSION 3.14)

project(UserPrivilege-Server VERSION 1.0 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED Core Sql HttpServer)

file(GLOB USERPRIVILEGE_SERVER_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB USERPRIVILEGE_SERVER_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_executable(${PROJECT_NAME} ${USERPRIVILEGE_SERVER_SOURCES})

target_link_libraries(${PROJECT_NAME} PRIVATE  Qt6::Core Qt6::Sql Util Qt6::HttpServer SJwt)

